# Live-Election-VoteCounter

./: CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  build.bat  build.sh  build_gui.bat  build_gui.sh
examples/: CMakeLists.txt  sample_election.cpp
include/: election_dashboard.hpp  election_system.hpp  fenwick_tree.hpp  vote_manager.hpp
src/: election_system.cpp  fenwick_tree.cpp  main.cpp  vote_manager.cpp
test/: CMakeLists.txt  test_election.cpp
